--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Bones
+author=LocalHero7
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=A terrible plugin that makes a sound and states when bones appear on the ground.
+tags=bones
+plugins=com.bones.bonesPlugin
